# go_iota_streams_lib

./: .gitignore  Makefile  go.mod  main.go
lib/: c_streams.h
lib/go_streams/: go.mod  go_streams_lib.go
lib/streams/: Cargo.toml
lib/streams/src/: lib.rs
lib/streams/src/api/: channel_writer.rs  mod.rs  utils.rs
