[package]
name = "c_streams_lib"
version = "0.1.0"
authors = ["lore-lml <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "c_streams_lib"
crate-type = ["staticlib", "cdylib"]

[dependencies]
iota_streams_lib = { git = "https://github.com/lore-lml/iota-streams-lib.git" }
tokio = { version = "1.1", features = ["full"] }
hex = "0.4.3"
